--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -12,27 +12,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/weather_icon"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/custom_border"
             android:weightSum="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/weather_icon">
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:id="@+id/temperatureBox"
@@ -55,6 +47,15 @@
                     android:layout_height="wrap_content"
                     android:text="@string/initial_step"
                     android:textSize="20sp" />
+
+                <ImageView
+                    android:id="@+id/weather_icon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    tools:layout_editor_absoluteX="211dp"
+                    tools:layout_editor_absoluteY="50dp" />
+
 
             </LinearLayout>
 
@@ -145,12 +146,12 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginBottom="160dp"
-            app:tint="@color/darkPink"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
             app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/linearLayout5"
-            app:srcCompat="@drawable/ic_anemometer" />
+            app:srcCompat="@drawable/ic_anemometer"
+            app:tint="@color/darkPink" />
 
         <LinearLayout
             android:id="@+id/linearLayout5"
@@ -225,8 +226,18 @@
             android:id="@+id/gif"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
-            />
+            android:background="@color/white" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/lv_weather"
+            android:layout_width="106dp"
+            android:layout_height="215dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/gif"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/gif"
+            tools:listitem="@layout/list_item"
+            android:scrollbars="horizontal"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
